# bevy_game

./: .gitignore  Cargo.toml  README.md
assets/map/: test_map.blend  test_map.glb
scripts/: cross_png_to_ktx2.sh
src/: lib.rs  main.rs
src/systems/: mod.rs  movement_system.rs  player_system.rs  scene_system.rs
src/ui/: mod.rs
src/ui/components/: heartbeat.rs  mod.rs
web/: index.html
