[package]
name = "my_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uuid = { version = "1.21.0", default-features = false, features = ["js"] }
bevy = { version = "0.14", default-features = true }
bevy_rapier3d = { version = "0.27", features = ["dim3"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"